manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deploy
spec:
  selector:
    matchLabels:
      app: python-app
  replicas: 1
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: cloudgenius/python-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
