manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
