manifests/ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: python.boeing.internal.cloudgenius.app
      http:
        paths:
          - path: /
            backend:
              serviceName: python-app-service
              servicePort: 80
  tls:
    - hosts:
        - "python.boeing.internal.cloudgenius.app"
      secretName: python.boeing.internal.cloudgenius.app
